# tmuxmux

./: .gitignore  Cargo.toml  LICENSE  PROGRESS.md  README.md  hosts.toml.example
.github/workflows/: build.yml
skills/progress-log/: SKILL.md
src/: acs.rs  app.rs  appmanager.rs  colors.rs  config.rs  db.rs  input.rs  main.rs  progresslog.rs  restore.rs  snapshot.rs  ssh.rs  terminal.rs
