[package]
name = "tmuxmux"
version = "0.3.0"
edition = "2021"

[dependencies]
eframe = { version = "0.34", features = ["glow"] }
egui = "0.34"
portable-pty = "0.9"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
libc = "0.2"
vt100-ctt = "0.17"
log = "0.4"
env_logger = "0.11"
arboard = { version = "3", features = ["wayland-data-control"] }
image = { version = "0.25", default-features = false, features = ["png"] }
rusqlite = { version = "0.32", features = ["bundled"] }

[profile.release]
opt-level = 3
# "thin" — full LTO gets the compiler OOM-killed on 16GB machines
lto = "thin"
